<resources>
    <string name="app_name" translatable="false">Weather App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_city_view" translatable="false">CityView</string>
    <string name="removeTitle">REMOVE ?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="removed">removed</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="date">Date</string>
    <string name="retrieving">Retrieving</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="title_activity_add_city" translatable="false">AddCityActivity</string>
    <string name="emptyAddFormMessage">Please fill in the form</string>
    <string name="errorMessage">An error occured</string>
    <string name="serviceAccountType" translatable="false">alonsojimenez.julien.weatherSyncService</string>
    <string name="creatingAccount">Creating Account</string>
    <string name="accountSuccess">The Account was successfully created</string>
    <string name="accountExists">The account already exists</string>
    <string name="accountError">An error occurred during account creation</string>
    <string name="updating">Updating</string>
    <string name="updated">Updated</string>
    <string name="added">Added</string>
    <string name="settings">Settings</string>
    <string name="refreshSettings">Update Settings</string>
    <string name="freq_summary">Time between database updates (in seconds)</string>
    <string name="freq_title">Interval</string>
</resources>
